--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,4 @@
-certifi==2020.12.5
-Flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-MarkupSafe==1.1.1
-mkl-fft==1.2.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-python-dateutil==2.8.1
-scikit-learn
-sklearn==0.0
-Werkzeug==1.0.1
-wincertstore==0.2
-pandas 
+flask
+gunicorn
+sklearn
+pandas
